--- a/web.xml
+++ b/web.xml
@@ -1,8 +1,13 @@
-     <web-app>  
-      
+ <web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
+                      https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
+  version="6.0"
+  metadata-complete="true">
+    <display-name>Servlet Number 1</display-name>
     <servlet>  
-    <servlet-name>Servlet1</servlet-name>  
-    <servlet-class>ServApp</servlet-class>  
+      <servlet-name>Servlet1</servlet-name>
+    <servlet-class>mypack.ServApp</servlet-class>  
     </servlet>  
       
     <servlet-mapping>  
@@ -10,4 +15,4 @@
     <url-pattern>/welcome</url-pattern>  
     </servlet-mapping>  
       
-    </web-app>  
+</web-app>  
